--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -63,7 +63,7 @@ body {
   cursor: pointer;
   background-color: #c0c0c0;
   box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey, inset 2px 2px #dfdfdf;
-  &:active {
+  &:active, &.active {
     box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a, inset -2px -2px #dfdfdf, inset 2px 2px grey;
     text-shadow: 1px 1px #222;
   }
